# cplusplus-cmake-template

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
lib/protobuf-3.0.0-alpha-3/: CHANGES.txt  Makefile.in  configure
src/: CMakeLists.txt
src/main/: main.cpp
src/test/: main_test.cpp
